# synthetify-solana

./: .gitignore  Anchor.toml  package.json
migrations/: deploy.js  testAdmin.js
programs copy/oracle/src/: lib.rs
programs copy/oracle_customer/: Cargo.toml
programs copy/test/: Cargo.toml
programs copy/test/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/oracle_customer/src/: lib.rs
programs/system/: Cargo.toml
programs/system/src/: lib.rs  math.rs
stripts/: createAsset.js  deploy copy.js  tempCodeRunnerFile.js  updateFeedPrice.js
tests/: oracle.js  system.js  system.test.js  utils.js
tests copy/: oracle.js  oracle_custormer.js  test.js
