[package]
name = "oracle_customer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_customer"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", features = ["derive"] }
oracle = { path = "../oracle", features = ["cpi"] }
