[package]
name = "system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "system"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = '0.2.0'
anchor-spl = '0.2.0'
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }